--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -1,3 +1,8 @@
+# 埃鲁系列状态图片
+mark_jieli: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3260.png'
+mark_dadizhiyou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3261.png'
+mark_shabaozhili: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3262.png'
+mark_taitanzhihu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3254.png'
 stat_stage_atk_down: https://seer2-resource.yuuinih.com/png/traitMark/atk_dec.png
 stat_stage_def_down: https://seer2-resource.yuuinih.com/png/traitMark/defense_dec.png
 stat_stage_spa_down: https://seer2-resource.yuuinih.com/png/traitMark/specialAtk_dec.png
