--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -1,3 +1,17 @@
+# 埃鲁系列技能音效
+skill_fusudadi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_1_001.mp3'
+skill_silieshabao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_2_001.mp3'
+skill_julidadi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_1_002.mp3'
+skill_lirenshabao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_2_002.mp3'
+skill_paoxiaonuhou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_3_001.mp3'
+skill_jinghuadadi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_1_001.mp3'
+skill_nixishabao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_2_001.mp3'
+skill_zhandounuhou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_3_001.mp3'
+skill_taitanzhinu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/11321.mp3'
+skill_fuchoudadi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_1_001.mp3'
+skill_huimieshabao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_2_002.mp3'
+skill_xiezuojieli: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_3_001.mp3'
+skill_taitanzhihu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/09_3_003.mp3'
 skill_paida: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_002.mp3'
 skill_shuipao: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
 skill_tuoli: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_001.mp3'
