--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -793,3 +793,39 @@
         evaluator:
           type: same
           value: skill_fenshenshu
+
+# 联防: 换下场时，给换上场的精灵添加25点受到伤害减少
+- id: effect_emblem_add_mark_switchinpet_shoudaoshanghaijianshao_25_on_switchout
+  trigger: OnSwitchOut
+  priority: 0
+  apply:
+    type: addMark
+    target:
+      base: switchPetContext
+      chain:
+        - type: selectPath
+          arg: switchInPet
+    mark:
+      type: entity:baseMark
+      value: mark_shoudaoshanghaijianshao
+    stack: 25
+  condition:
+    type: selfSwitchOut
+
+# 联防: 换上场时，给自己添加15点受到伤害减少
+- id: effect_emblem_add_mark_shoudaoshanghaijianshao_15_on_switchin
+  trigger: OnSwitchOut
+  priority: 0
+  apply:
+    type: addMark
+    target:
+      base: switchPetContext
+      chain:
+        - type: selectPath
+          arg: switchInPet
+    mark:
+      type: entity:baseMark
+      value: mark_shoudaoshanghaijianshao
+    stack: 25
+  condition:
+    type: selfSwitchIn
