--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -157,3 +157,8 @@
   config: *ablitity_config
   effect:
     - effect_ability_add_20_rage_when_use_fly_skill_twice
+- id: mark_ability_liandong
+  config: *ablitity_config
+  effect:
+    - effect_ability_spa_skill_add_dadizhi_1_hit_or_miss # TODO: 特攻无视Miss使自身获得1层大地之佑
+    - effect_ability_atk_skill_add_shabaozhi_1_hit_or_miss # TODO: 物攻无视Miss使自身获得1层沙暴之力
